--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                         <code>cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag</code>
                         <p></p>
                         <p>The Internet of Blockchains</p>
+                        <p>current apr: <strong>10%</strong></p>
                         <a href="https://wallet.keplr.app/#/cosmoshub/stake?modal=detail&validator=cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
