--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/cosmos.png" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Atom</h4>
+                        <h4>Cosmos</h4>
                         <code>cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag</code>
                         <p></p>
                         <p>The Internet of Blockchains</p>
