--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                     <div>
                         <img src="images/token_cro.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <p class=featured>Featured</p>
-                        <h4>Crypto.org chain</h4>
+                        <h4>Crypto.org chain (CRO)</h4>
                         <code>crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8</code>
                         <p></p>
                         <p>A fully decentralized network with high speed and low fees</p>
-                        <p>current apr: <strong id="cro_apy"></strong></p>
+                        <p>Current apr: <strong id="cro_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
                             <p style="width:200px; margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
@@ -144,11 +144,11 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_kava.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Kava</h4>
+                        <h4>Kava (Kava)</h4>
                         <code>kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda</code>
                         <p></p>
                         <p>A fully integrated suite of financial products for crypto</p>
-                        <p>current apr: <strong id="kava_apy"></strong></p>
+                        <p>Current apr: <strong id="kava_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/kava/stake?modal=detail&validator=kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
@@ -162,11 +162,11 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Fetch.ai</h4>
+                        <h4>Fetch.ai (Fet)</h4>
                         <code>fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc</code>
                         <p></p>
                         <p>Artificial Intelligence for Blockchains</p>
-                        <p>current apr: <strong id="fetch_apy"></strong></p>
+                        <p>Current apr: <strong id="fetch_apy"></strong></p>
                         <!-- <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc"> -->
                         <a href="stake_fet.html">
                             <p class=delegate>Delegation guide</p>
@@ -181,11 +181,11 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_osmosis.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Osmosis</h4>
+                        <h4>Osmosis (Osmo)</h4>
                         <code>osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04</code>
                         <p></p>
                         <p>Automated market maker for interchain</p>
-                        <p>current apr: <strong id="osmosis_apy"></strong></p>
+                        <p>Current apr: <strong id="osmosis_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/osmosis/stake?modal=detail&validator=osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
@@ -198,11 +198,11 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/cosmos.png" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Cosmos</h4>
+                        <h4>Cosmos (Atom)</h4>
                         <code>cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag</code>
                         <p></p>
                         <p>The Internet of Blockchains</p>
-                        <p>current apr: <strong>10%</strong></p>
+                        <p>Current apr: <strong>10%</strong></p>
                         <a href="https://wallet.keplr.app/#/cosmoshub/stake?modal=detail&validator=cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
