--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_kava.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Kava (Kava)</h4>
+                        <h4>Kava (KAVA)</h4>
                         <code>kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda</code>
                         <p></p>
                         <p>A fully integrated suite of financial products for crypto</p>
@@ -162,7 +162,7 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Fetch.ai (Fet)</h4>
+                        <h4>Fetch.ai (FET)</h4>
                         <code>fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc</code>
                         <p></p>
                         <p>Artificial Intelligence for Blockchains</p>
@@ -181,7 +181,7 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/token_osmosis.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Osmosis (Osmo)</h4>
+                        <h4>Osmosis (OSMO)</h4>
                         <code>osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04</code>
                         <p></p>
                         <p>Automated market maker for interchain</p>
@@ -198,7 +198,7 @@
                     <div class="online"></div>
                     <div>
                         <img src="images/cosmos.png" loading="lazy" alt="" class="icon" style="height:70px">
-                        <h4>Cosmos (Atom)</h4>
+                        <h4>Cosmos (ATOM)</h4>
                         <code>cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag</code>
                         <p></p>
                         <p>The Internet of Blockchains</p>
