--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@
                         </a>
                     </div>
                 </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/NGM.jpeg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>e-Money (NGM)</h4>
+                        <code>emoney19pjtx7dah2fquf7udyxjv94h0eraha7824t275</code>
+                        <p></p>
+                        <p>Leading issuer of transparent, interest-bearing, currency-backed stablecoins for the Internet of Money</p>
+                        <p>Relayer</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
