--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
                         <p></p>
                         <p>Leading issuer of transparent, interest-bearing, currency-backed stablecoins for the Internet of Money</p>
                         <p>Relayer</p>
+                        <a href="https://wallet.keplr.app/#/emoney/stake?modal=detail&validator=emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
+                        </a>
+                        <a href="https://www.mintscan.io/emoney/validators/emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
                     </div>
                 </div>
             </div>
