--- a/index.html
+++ b/index.html
@@ -228,6 +228,20 @@
                         </a>
                     </div>
                 </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/NGM.jpeg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Junø (Juno)</h4>
+                        <code>juno1p0r4znp29547d8ra5k8t6ls0ztm3tj74zt8g4m</code>
+                        <p></p>
+                        <p>Juno is an interoperable smart contract network. Highly scalable, robust, secure and easy to deploy!</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/juno/validators/junovaloper1p0r4znp29547d8ra5k8t6ls0ztm3tj74ak38wz">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
