--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
-                        <img src="images/NGM.jpeg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <img src="images/Juno.png" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Junø (Juno)</h4>
                         <code>juno1p0r4znp29547d8ra5k8t6ls0ztm3tj74zt8g4m</code>
                         <p></p>
