Add Monitor page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                 <a href="index.html#Network" class="nav-link-2 w-nav-link">Our Networks</a>
                 <a href="faq.html" class="nav-link-4 w-nav-link">FAQ</a>
                 <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-5 w-nav-link">Contact</a>
+                <a href="https://chain-monitor.cros-nest.com/" target="_blank" class="nav-link-5 w-nav-link">Monitor</a>
+
             </nav>
             <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
