--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                         <p></p>
                         <p>A fully decentralized network with high speed and low fees</p>
                         <p>Current apr: <strong id="cro_apy"></strong></p>
-                        <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
+                        <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8" target="_blank">
                             <p style="width:200px; margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
-                        <a href="https://crypto.org/explorer/validator/crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
+                        <a href="https://crypto.org/explorer/validator/crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                         <a href="guide.html">
@@ -151,10 +151,10 @@
                         <p></p>
                         <p>A fully integrated suite of financial products for crypto</p>
                         <p>Current apr: <strong id="kava_apy"></strong></p>
-                        <a href="https://wallet.keplr.app/#/kava/stake?modal=detail&validator=kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
+                        <a href="https://wallet.keplr.app/#/kava/stake?modal=detail&validator=kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
-                        <a href="https://www.mintscan.io/kava/validators/kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
+                        <a href="https://www.mintscan.io/kava/validators/kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
@@ -173,7 +173,7 @@
                         <a href="stake_fet.html">
                             <p class=delegate>Delegation guide</p>
                         </a>
-                        <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc">
+                        <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
@@ -188,10 +188,10 @@
                         <p></p>
                         <p>Automated market maker for interchain</p>
                         <p>Current apr: <strong id="osmosis_apy"></strong></p>
-                        <a href="https://wallet.keplr.app/#/osmosis/stake?modal=detail&validator=osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04">
+                        <a href="https://wallet.keplr.app/#/osmosis/stake?modal=detail&validator=osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
-                        <a href="https://www.mintscan.io/osmosis/validators/osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04">
+                        <a href="https://www.mintscan.io/osmosis/validators/osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
@@ -205,10 +205,10 @@
                         <p></p>
                         <p>The Internet of Blockchains</p>
                         <p>Current apr: <strong>10%</strong></p>
-                        <a href="https://wallet.keplr.app/#/cosmoshub/stake?modal=detail&validator=cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
+                        <a href="https://wallet.keplr.app/#/cosmoshub/stake?modal=detail&validator=cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
-                        <a href="https://www.mintscan.io/cosmos/validators/cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
+                        <a href="https://www.mintscan.io/cosmos/validators/cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
@@ -222,10 +222,10 @@
                         <p></p>
                         <p>Leading issuer of transparent, interest-bearing, currency-backed stablecoins for the Internet of Money</p>
                         <p></p>
-                        <a href="https://wallet.keplr.app/#/emoney/stake?modal=detail&validator=emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl">
+                        <a href="https://wallet.keplr.app/#/emoney/stake?modal=detail&validator=emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl" target="_blank"> 
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
                         </a>
-                        <a href="https://www.mintscan.io/emoney/validators/emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl">
+                        <a href="https://www.mintscan.io/emoney/validators/emoneyvaloper1r7v26mcg7frd8l44p5vr2wfv7eqrhpagffvncl" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
@@ -239,7 +239,91 @@
                         <p></p>
                         <p>Juno is an interoperable smart contract network. Highly scalable, robust, secure and easy to deploy!</p>
                         <p></p>
-                        <a href="https://www.mintscan.io/juno/validators/junovaloper1p0r4znp29547d8ra5k8t6ls0ztm3tj74ak38wz">
+                        <a href="https://www.mintscan.io/juno/validators/junovaloper1p0r4znp29547d8ra5k8t6ls0ztm3tj74ak38wz" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/Comdex.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Comdex (CMDX)</h4>
+                        <code>comdexvaloper12dseyeqwsv3lkxlks45p4fp7et4qnzn5vkavjf</code>
+                        <p></p>
+                        <p>Comdex gives seamless access to global assets and liquidity</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/comdex/validators/comdexvaloper12dseyeqwsv3lkxlks45p4fp7et4qnzn5vkavjf" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/persistence.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Persistence (XPRT)</h4>
+                        <code>persistencevaloper1nchnrey36nrvzjslscu0c3l8j0r4z92hlsz3gk</code>
+                        <p></p>
+                        <p>Protocol Enabling Exposure To Multiple Asset Classes</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/persistence/validators/persistencevaloper1nchnrey36nrvzjslscu0c3l8j0r4z92hlsz3gk" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/Gravity.jpeg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Gravity Bridge (GRAVITON)</h4>
+                        <code>gravityvaloper187reejg4et24jpggqt55vnc47l926w0p8w70mh</code>
+                        <p></p>
+                        <p> Gravity Bridge is a decentralized Cosmos blockchain whose primary purpose is to secure the operation of bridges between blockchains.</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/gravity-bridge/validators/gravityvaloper187reejg4et24jpggqt55vnc47l926w0p8w70mh" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/Lum.jpeg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Lum (LUM)</h4>
+                        <code>lumvaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kash9slqs</code>
+                        <p></p>
+                        <p>Lum Network introduces the first decentralized protocol for businesses to build authentic trust with their customers.</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/lum/validators/lumvaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kash9slqs" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/Ki2.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Ki Chain (XKI)</h4>
+                        <code>kivaloper1lykm0h574w0r3jm545hhlfnd8937a70022xlwl</code>
+                        <p></p>
+                        <p>Bridging CeFi with DeFi Block by Block</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/ki-chain/validators/kivaloper1lykm0h574w0r3jm545hhlfnd8937a70022xlwl" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/chihuahua.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Chihuahua (HUAHUA)</h4>
+                        <code>chihuahuavaloper18jlk0pkpr8cnnpjtgu3dqxjvpvlnj6r4e2dtvf</code>
+                        <p></p>
+                        <p>Useless meme coin on Cosmos</p>
+                        <p></p>
+                        <a href="https://www.mintscan.io/chihuahua/validators/chihuahuavaloper18jlk0pkpr8cnnpjtgu3dqxjvpvlnj6r4e2dtvf" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
