Update Dig, Cronos, Konstellation

--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
                         </a>
                     </div>
                 </div>
+                <div class="feature-card w-inline-block">
+                <div class="online"></div>
+                    <div>
+                        <img src="images/Cronos.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <p class=featured>Featured</p>
+                        <h4>Cronos Chain(CRO)</h4>
+                        <code>crcvaloper1vq8hl5uet6hfplf3f9sj9e9j29n5gd4nrm699m</code>
+                        <p></p>
+                        <p>An easy-to-use platform to rapidly port apps from Ethereum and EVM-compatible chains</p>  
+                        <a href="https://cronos.crypto.org/validators" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Website</p>
+                        </a>
+                    </div>
+                </div>
 
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
@@ -317,6 +331,20 @@
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
+                        <img src="images/Dig.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Dig (DIG)</h4>
+                        <code></code>
+                        <p></p>
+                        <p>Dig Coin. Governing Real Estate.</p>
+                        <p></p>
+                        <a href="https://ping.pub/dig/staking/digvaloper1zqp8f7ehuf64psmg0tz3cydacgk2nshg338e8m" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
                         <img src="images/chihuahua.png" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Chihuahua (HUAHUA)</h4>
                         <code>chihuahuavaloper18jlk0pkpr8cnnpjtgu3dqxjvpvlnj6r4e2dtvf</code>
@@ -325,6 +353,20 @@
                         <p></p>
                         <a href="https://www.mintscan.io/chihuahua/validators/chihuahuavaloper18jlk0pkpr8cnnpjtgu3dqxjvpvlnj6r4e2dtvf" target="_blank">
                             <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/Konstellation.svg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Konstellation (DARC)</h4>
+                        <code>In Testnet</code>
+                        <p></p>
+                        <p>Infrastructure for the DeFi Capital Markets</p>
+                        <p></p>
+                        <a href="https://konstellation.tech/" target="_blank">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Website</p>
                         </a>
                     </div>
                 </div>
